[package]
name = "axum_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["multipart", "default"]}
reqwest = { version = "0.11.22", features = ["json", "multipart"] }
tokio = { version = "1.34.0", features = ["full"] }
url = { version = "2.5.0" }
serde = "1.0.193"
http = { version = "1.0.0" }
headers = { version = "0.4.0" }
bytes = "1.5.0"
tower = "0.4.13"
tower-service = "0.3.2"